--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -121,4 +121,10 @@
 .display__none {
   display: none;
 }
+
+.flats__text {
+  font-size: 20px;
+  margin-left: 40px;
+  font-weight: 600;
+}
 /*# sourceMappingURL=App.css.map */
