--- a/src/components/AddCard/AddNewFlats.css
+++ b/src/components/AddCard/AddNewFlats.css
@@ -44,6 +44,7 @@
           margin-block-end: 0;
   font-weight: normal;
   font-style: italic;
+  text-decoration: underline;
 }
 
 .add-form__modul {
@@ -95,9 +96,9 @@
   padding: 10px 0 5px 0;
   font-weight: normal;
   font-size: 20px;
-  line-height: 12px;
-  padding-right: 10px;
+  line-height: 24px;
   font-style: italic;
+  text-decoration: underline;
 }
 
 .add-form__type_info {
@@ -263,10 +264,44 @@
   }
 }
 
+.popup__title_object {
+  margin: 10px 20px;
+  -ms-flex-item-align: auto;
+      -ms-grid-row-align: auto;
+      align-self: auto;
+}
+
 .add-form__type_rooms {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.add-form__type_rooms ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+}
+
+.add-form__type_rooms ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.add-form__label_num {
+  padding: 0 0 0 10px;
 }
 /*# sourceMappingURL=AddNewFlats.css.map */
