--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,14 +4,15 @@
   display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
-  width: 95%;
-  height: 120px;
+  width: 100%;
+  height: 140px;
   z-index: 1;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
-  background-image: url("../../images/fon1.jpg");
+  max-width: 1440px;
+  background: url("../../images/fon1.jpg") no-repeat;
 }
 
 @media screen and (max-width: 820px) {
@@ -29,6 +30,12 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
+    background-position-x: center;
   }
 }
 
@@ -50,8 +57,9 @@
   width: 250px;
   position: absolute;
   top: 0;
-  left: 10px;
+  left: 30px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 550px) {
@@ -197,6 +205,7 @@
   text-align: center;
   -webkit-box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6);
           box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6);
+  margin-right: 30px;
 }
 
 .header__profile:hover {
