--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,13 +1,13 @@
 .header
     display: flex
     margin: 0 auto
-    width: 95%
-    height: 120px
+    width: 100%
+    height: 140px
     z-index: 1
     justify-content: space-between
     position: relative
-    //max-width: 1440px
-    background-image: url('../../images/fon1.jpg')
+    max-width: 1440px
+    background: url('../../images/fon1.jpg') no-repeat
     @media screen
         @media (max-width: 820px) 
             overflow: hidden
@@ -16,6 +16,8 @@
             background: none
         @media (max-width: 550px)
             flex-direction: column
+        @media (min-width: 1440px)
+            background-position-x: center 
 .header__img
     position: relative
     @media screen
@@ -27,8 +29,9 @@
   width: 250px
   position: absolute
   top: 0
-  left: 10px
+  left: 30px
   margin-top: 20px
+  margin-bottom: 20px
   @media screen
     @media (max-width: 550px)
       width: 100px
@@ -109,5 +112,6 @@
     width: 120px
     text-align: center
     box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6)
+    margin-right: 30px
     &:hover
         text-decoration: underline
