--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -1,6 +1,42 @@
 .menu__list
   display: flex
   flex-direction: row
+  list-style-type: none
+  margin-block-start: 0
+  margin-block-end: 0
+  padding-inline-start: 0
+  min-height: 80px
+  background: linear-gradient(#fff4e4, #ffe0d4, #ffe0d4, #ffe0d4, #fff4e4)
+  justify-content: space-between
+  justify-self: center
+  margin-top: 20px
+  @media screen
+    @media (min-width: 1440px)
+      width: 1440px
+      margin: 20px auto
 
 .menu__item
   display: flex
+  align-self: center
+  justify-self: center
+  line-height: 58px
+  font-size: 48px
+  justify-content: center
+  color: #000
+  text-decoration: none
+  cursor: pointer
+  &:hover
+    text-decoration: underline
+  @media screen
+    @media (max-width: 1440px)
+      line-height: 36px
+      font-size: 24px
+      width: 91%
+    @media (max-width: 550px)
+      flex-direction: column
+
+.menu__item_active
+  text-decoration: underline
+
+.none
+  display: none
