поправила адаптив, добавила кнопку назад, добавила кнопку редактирования

--- a/src/components/CardDesc/CardDesc.sass
+++ b/src/components/CardDesc/CardDesc.sass
@@ -8,6 +8,7 @@
   @extend %flexCol
   max-width: 93%
   margin: 50px auto
+  position: relative
   @media screen
     @media (min-width: 1441px)
       max-width: 1340px
