--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -7,13 +7,15 @@
   padding-inline-start: 0
   min-height: 80px
   background: linear-gradient(#fff4e4, #ffe0d4, #ffe0d4, #ffe0d4, #fff4e4)
-  justify-content: space-between
+  justify-content: space-around
   justify-self: center
-  margin-top: 20px
+  //margin-top: 20px
+  box-shadow: inset 0 20px 40px #ffcba4;
+  text-align: center
   @media screen
     @media (min-width: 1440px)
       width: 1440px
-      margin: 20px auto
+      margin: 0 auto
 
 .menu__item
   display: flex
