--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -42,13 +42,31 @@
 }
 
 .object {
-  max-width: 91,7%;
+  max-width: 91.7%;
   height: 475px;
   margin: 50px 60px;
   -webkit-box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
           box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
   background: #FEE0D4;
   position: relative;
+  border-radius: 30px;
+}
+
+.object a {
+  color: #000;
+  text-decoration: none;
+  display: inherit;
+  -webkit-box-orient: inherit;
+  -webkit-box-direction: inherit;
+      -ms-flex-direction: inherit;
+          flex-direction: inherit;
+  width: 100%;
+}
+
+@media screen and (min-width: 1440px) {
+  .object {
+    margin: 50px auto;
+  }
 }
 
 @media screen and (max-width: 1240px) {
@@ -152,6 +170,9 @@
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 10px 15px 30px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
@@ -202,7 +223,7 @@
     display: flex;
     -ms-flex-item-align: center;
         align-self: center;
-    margin: auto 22px;
+    margin: 22px;
   }
 }
 
@@ -216,7 +237,7 @@
   .object__photo {
     width: 200px;
     height: 260px;
-    margin: auto;
+    margin: 20px auto 10px;
   }
 }
 
@@ -233,6 +254,12 @@
   -ms-grid-column-span: 4;
   grid-area: 5/1/6/5;
   overflow: hidden;
+}
+
+@media screen and (max-width: 550px) {
+  .object__text-block {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -398,5 +425,11 @@
   position: absolute;
   top: -26px;
   left: -40px;
+}
+
+@media screen and (max-width: 750px) {
+  .object__photo-item {
+    margin-top: 40px;
+  }
 }
 /*# sourceMappingURL=Cards.css.map */
