--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -21,13 +21,22 @@
     block-end: 0
 .object
   @extend %flexRow
-  max-width: 91,7%
+  max-width: 91.7%
   height: 475px
   margin: 50px 60px
   box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8)
   background: #FEE0D4
   position: relative
+  border-radius: 30px
+  a 
+    color: #000
+    text-decoration: none
+    display: inherit
+    flex-direction: inherit
+    width: 100%
   @media screen
+    @media (min-width: 1440px)
+      margin: 50px auto
     @media (max-width: 1240px)
       /*max-width: 1134px*/
       margin: 50px 55px
@@ -80,6 +89,7 @@
       display: flex
       flex-direction: column
       margin: 10px 15px 30px
+      align-items: flex-start
     @media (max-width: 650px)
       align-items: center
     @media (min-width: 950px)
@@ -106,13 +116,13 @@
     @media (max-width: 950px)
       display: flex
       align-self: center
-      margin: auto 22px
+      margin: 22px
     @media (max-width: 650px)
       height: 400px
     @media (max-width: 550px)
       width: 200px
       height: 260px
-      margin: auto
+      margin: 20px auto 10px
 .object__price
   @extend %margin
   @extend %fontM
@@ -123,6 +133,9 @@
   @extend %flexCol
   grid-area: 5/1/6/5
   overflow: hidden 
+  @media screen
+    @media (max-width: 550px)
+      width: 90%
 .object__head
   @extend %margin
   @extend %fontS
@@ -225,3 +238,7 @@
     top: -26px
     left: -40px
 
+.object__photo-item
+  @media screen
+    @media (max-width: 750px)
+      margin-top: 40px
