--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -8,6 +8,8 @@
   width: 100%
   flex-shrink: 0
   margin: 0 auto
+.footer__back
+  background-color: #000
 .footer div
   display: flex
   max-width: 1150px
@@ -15,8 +17,8 @@
   width: 100%
   justify-content: space-between
   @media screen
-    @media (max-width: 580px)
-      flex-direction: column
+    @media (max-width: 650px)
+      flex-direction: column-reverse
 .footer__logo
   display: flex
   font-style: italic
@@ -27,21 +29,25 @@
   margin-block-end: 0
   margin-top: 45px
   @media screen
-    @media (max-width: 1024px)
-      font: 64px/78px
-    @media (max-width: 580px)
-      font: 36px/44px
-      margin-top: 27px
+    @media (max-width: 1440px)
+      font-size: 64px
+      line-height: 78px
+    @media (max-width: 650px)
+      font-size: 36px
+      line-height: 48px
+      margin-top: 0
+      justify-content: center
 .footer__block
   display: flex
   flex-direction: column
+  margin-left: 50px
   @media screen
     @media (max-width: 1024px)
       margin-left: 75px
     @media (max-width: 820px)
       margin-left: 43px
-    @media (max-width: 580px)
-      margin: auto
+    @media (max-width: 650px)
+      margin: 0px auto 30px 
 .footer__author
   font-style: normal
   font-weight: normal
@@ -52,8 +58,11 @@
   margin-block-end: 0
   margin: 25px 0 15px
   @media screen
-    @media (max-width: 580px)
-      display: none
+    @media (max-width: 1440px)
+      font-size: 16px
+      line-height: 20px
+    //@media (max-width: 650px)
+    //  display: none
 .contacts
   font-family: Cormorant
   display: flex
@@ -69,16 +78,16 @@
   margin-top: 15px
   white-space: nowrap
   @media screen
-    @media (max-width: 1024px)
-      font-size: 24px
-      line-height: 29px
-      margin: 15px 180px 0 0
+    @media (max-width: 1440px)
+      font-size: 28px
+      line-height: 36px
+      margin: 15px 50px 0 0
 
     @media (max-width: 820px)
       margin: 15px 100px 0 0
 
-    @media (max-width: 580px)
-      margin: auto
+    @media (max-width: 650px)
+      margin: 20px auto 30px
       align-items: center
 .contact
   display: flex
