--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12,14 +11,12 @@
           justify-content: space-between;
   position: relative;
   max-width: 1440px;
-  background: url("../../images/fon1.jpg") no-repeat;
 }
 
 @media screen and (max-width: 820px) {
   .header {
     overflow: hidden;
     background-size: cover;
-    height: 110px;
     background: none;
   }
 }
@@ -30,6 +27,9 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -37,6 +37,12 @@
   .header {
     background-position-x: center;
   }
+}
+
+.header__back {
+  background: url("../../images/fon1.jpg") no-repeat;
+  -webkit-box-shadow: inset 20px 0 40px #e9cfec;
+          box-shadow: inset 20px 0 40px #e9cfec;
 }
 
 .header__img {
@@ -203,12 +209,20 @@
   border-radius: 15px;
   width: 120px;
   text-align: center;
-  -webkit-box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6);
-          box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6);
+  -webkit-box-shadow: 5px 5px 5px 0 rgba(255, 255, 255, 0.6);
+          box-shadow: 5px 5px 5px 0 rgba(255, 255, 255, 0.6);
   margin-right: 30px;
+  padding: 0 3px;
 }
 
 .header__profile:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 550px) {
+  .header__profile {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 /*# sourceMappingURL=Header.css.map */
