--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -7,17 +7,20 @@
     justify-content: space-between
     position: relative
     max-width: 1440px
-    background: url('../../images/fon1.jpg') no-repeat
     @media screen
         @media (max-width: 820px) 
             overflow: hidden
             background-size: cover
-            height: 110px
+            //height: 110px
             background: none
         @media (max-width: 550px)
             flex-direction: column
+            align-items: center
         @media (min-width: 1440px)
             background-position-x: center 
+.header__back
+    background: url('../../images/fon1.jpg') no-repeat
+    box-shadow: inset 20px 0 40px #e9cfec;
 .header__img
     position: relative
     @media screen
@@ -111,7 +114,12 @@
     border-radius: 15px
     width: 120px
     text-align: center
-    box-shadow: 5px 5px 5px 0 rgbф(255 255 255 0.6)
+    box-shadow: 5px 5px 5px 0 rgba(255, 255, 255, 0.6)
     margin-right: 30px
+    padding: 0 3px
     &:hover
         text-decoration: underline
+    @media screen
+        @media (max-width: 550px)
+            margin-right: 0
+            margin-bottom: 20px
