--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -16,17 +16,18 @@
   min-height: 80px;
   background: -webkit-gradient(linear, left top, left bottom, from(#fff4e4), color-stop(#ffe0d4), color-stop(#ffe0d4), color-stop(#ffe0d4), to(#fff4e4));
   background: linear-gradient(#fff4e4, #ffe0d4, #ffe0d4, #ffe0d4, #fff4e4);
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   justify-self: center;
-  margin-top: 20px;
+  -webkit-box-shadow: inset 0 20px 40px #ffcba4;
+          box-shadow: inset 0 20px 40px #ffcba4;
+  text-align: center;
 }
 
 @media screen and (min-width: 1440px) {
   .menu__list {
     width: 1440px;
-    margin: 20px auto;
+    margin: 0 auto;
   }
 }
 
