--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .menu {
-  margin: -120px auto 0;
+  margin: -140px auto 0;
   background: url("../../images/back.jpg") no-repeat;
   background-size: cover;
   background-position-x: center;
@@ -27,6 +27,46 @@
   margin: 35px auto 110px;
 }
 
+@media screen and (max-width: 1240px) {
+  .property {
+    margin: 100px auto 0;
+    max-width: 1038px;
+    width: 86%;
+  }
+  .property:last-of-type {
+    margin: 100px auto 35px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .property {
+    margin: 40px auto 0;
+    max-width: 924px;
+    width: 91%;
+  }
+  .property:last-of-type {
+    margin: 40px auto 80px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .property {
+    max-width: 644px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .property {
+    margin: 30px auto 0;
+  }
+  .property:last-of-type {
+    margin: 30px auto 40px;
+  }
+}
+
 .property__grid {
   display: -ms-grid;
   display: grid;
@@ -39,6 +79,38 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  list-style-type: none;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+}
+
+@media screen and (max-width: 1440px) {
+  .property__grid {
+    -webkit-column-gap: 40px;
+            column-gap: 40px;
+    row-gap: 70px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .property__grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 75px;
+            column-gap: 75px;
+    row-gap: 45px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .property__grid {
+    -ms-grid-columns: 250px;
+        grid-template-columns: 250px;
+  }
 }
 
 .property_estate {
@@ -56,6 +128,27 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (max-width: 1440px) {
+  .property_estate {
+    font-size: 64px;
+    line-height: 78px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .property_estate {
+    font-size: 48px;
+    line-height: 58px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .property_estate {
+    font-size: 36px;
+    line-height: 44px;
+  }
 }
 
 .property__block {
@@ -83,57 +176,15 @@
   width: 100%;
 }
 
-@media screen and (max-width: 1240px) {
-  .property {
-    margin: 100px auto 0;
-    max-width: 1038px;
-    width: 86%;
-  }
-  .property:last-of-type {
-    margin: 100px auto 35px;
-  }
-  .property__grid {
-    -webkit-column-gap: 40px;
-            column-gap: 40px;
-    row-gap: 70px;
-  }
-  .property_estate {
-    font-size: 64px;
-    line-height: 78px;
-  }
+@media screen and (max-width: 1440px) {
   .property__block {
     font-size: 36px;
     line-height: 44px;
-    min-height: 145px;
     max-width: 320px;
   }
 }
 
-@media screen and (max-width: 1024px) {
-  .property {
-    margin: 40px auto 0;
-    max-width: 924px;
-    width: 91%;
-  }
-  .property:last-of-type {
-    margin: 40px auto 80px;
-  }
-}
-
 @media screen and (max-width: 820px) {
-  .property {
-    max-width: 644px;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-  }
-  .property__grid {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -webkit-column-gap: 75px;
-            column-gap: 75px;
-    row-gap: 45px;
-  }
   .property__block {
     min-height: 135px;
     max-width: 284px;
@@ -143,31 +194,14 @@
   }
 }
 
-@media screen and (max-width: 787px) {
-  .property_estate {
-    font-size: 48px;
-    line-height: 58px;
-  }
-}
-
 @media screen and (max-width: 550px) {
-  .property {
-    margin: 30px auto 0;
-  }
-  .property:last-of-type {
-    margin: 30px auto 40px;
-  }
-  .property__grid {
-    -ms-grid-columns: 250px;
-        grid-template-columns: 250px;
-  }
-  .property_estate {
-    font-size: 36px;
-    line-height: 44px;
-  }
   .property__block {
     min-height: 75px;
     max-width: 250px;
   }
+}
+
+.none {
+  display: none;
 }
 /*# sourceMappingURL=NavBar.css.map */
