--- a/src/components/NavBar/NavBar.sass
+++ b/src/components/NavBar/NavBar.sass
@@ -1,6 +1,6 @@
 //не правила
 .menu
-  margin: -120px auto 0
+  margin: -140px auto 0
   background: url('../../images/back.jpg') no-repeat
   background-size: cover
   background-position-x: center
@@ -15,10 +15,28 @@
   max-width: 1440px
   width: 91%
   margin: 35px auto 0
-
-.property:last-of-type
-  margin: 35px auto 110px
-
+  &:last-of-type
+    margin: 35px auto 110px
+  @media screen
+    @media (max-width: 1240px)
+      margin: 100px auto 0
+      max-width: 1038px
+      width: 86%
+      &:last-of-type
+        margin: 100px auto 35px
+    @media (max-width: 1024px)
+      margin: 40px auto 0
+      max-width: 924px
+      width: 91%
+      &:last-of-type
+        margin: 40px auto 80px    
+    @media (max-width: 820px)
+      max-width: 644px
+      flex: 1
+    @media (max-width: 550px)
+      margin: 30px auto 0
+      &:last-of-type
+        margin: 30px auto 40px
 .property__grid
   display: grid
   grid-template-columns: repeat(3, minmax(250px, 1fr))
@@ -26,6 +44,21 @@
   row-gap: 40px
   margin-top: 25px
   justify-content: center
+  list-style-type: none
+  margin-block-start: 0
+  margin-block-end: 0
+  padding-inline-start: 0
+  //margin-bottom: 50px
+  @media screen
+    @media (max-width: 1440px)
+      column-gap: 40px
+      row-gap: 70px
+    @media (max-width: 900px)
+      grid-template-columns: repeat(2, 1fr)
+      column-gap: 75px
+      row-gap: 45px
+    @media (max-width: 550px)
+      grid-template-columns: 250px
 
 .property_estate
   font-size: 72px
@@ -38,6 +71,16 @@
   margin-block-end: 0
   color: #FFAB2D
   display: flex
+  @media screen
+    @media (max-width: 1440px)
+      font-size: 64px
+      line-height: 78px
+    @media (max-width: 850px)
+      font-size: 48px
+      line-height: 58px
+    @media (max-width: 550px)
+      font-size: 36px
+      line-height: 44px
 
 .property__block
   display: flex
@@ -55,64 +98,20 @@
   align-items: center
   max-width: 400px
   width: 100%
-
-@media screen
-  @media (max-width: 1240px)
-    .property
-      margin: 100px auto 0
-      max-width: 1038px
-      width: 86%
-    .property:last-of-type
-      margin: 100px auto 35px
-    .property__grid
-      column-gap: 40px
-      row-gap: 70px
-    .property_estate
-      font-size: 64px
-      line-height: 78px
-    .property__block
+  @media screen
+    @media (max-width: 1440px)
       font-size: 36px
       line-height: 44px
-      min-height: 145px
+      //min-height: 145px
       max-width: 320px
-
-  @media (max-width: 1024px)
-    .property
-      margin: 40px auto 0
-      max-width: 924px
-      width: 91%
-    .property:last-of-type
-      margin: 40px auto 80px
-
-  @media (max-width: 820px)
-    .property
-      max-width: 644px
-      flex: 1
-    .property__grid
-      grid-template-columns: repeat(2, 1fr)
-      column-gap: 75px
-      row-gap: 45px
-    .property__block
+    @media (max-width: 820px)
       min-height: 135px
       max-width: 284px
       background: rgba(254, 224, 180, .9)
       box-shadow: 15px 15px 15px 0 rgba(207, 91, 0, .6)
-
-  @media (max-width: 787px)
-    .property_estate
-      font-size: 48px
-      line-height: 58px
-
-  @media (max-width: 550px)
-    .property
-      margin: 30px auto 0
-    .property:last-of-type
-      margin: 30px auto 40px
-    .property__grid
-      grid-template-columns: 250px
-    .property_estate
-      font-size: 36px
-      line-height: 44px
-    .property__block
+    @media (max-width: 550px)
       min-height: 75px
       max-width: 250px
+
+.none
+  display: none
