--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -11,6 +11,26 @@
           flex: 1;
 }
 
+@media screen and (max-width: 950px) {
+  .profile__nav-list {
+    display: inherit;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .profile__nav-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .profile__nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -23,10 +43,23 @@
   font-size: 24px;
   line-height: 29px;
   font-style: italic;
-  font-weight: 600;
+  font-weight: 500;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 950px) {
+  .profile__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: -webkit-fill-available;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    margin: 15px 30px;
+  }
 }
 
 .profile__nav .profile__confirm {
@@ -36,13 +69,7 @@
           align-items: center;
 }
 
-.profile__nav .profile__user {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.profile__nav .profile__exit {
+.profile__nav .profile__user, .profile__nav .profile__exit {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -58,11 +85,40 @@
           flex-direction: column;
 }
 
+@media screen and (max-width: 1024px) {
+  .profile__block {
+    margin: 10px 40px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+}
+
 .profile__user {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-right: 20px;
+  font-weight: 600;
+  font-style: normal;
+}
+
+@media screen and (max-width: 850px) {
+  .profile__user {
+    margin-right: 0;
+  }
 }
 
 .profile__exit {
@@ -73,6 +129,21 @@
   color: #000;
 }
 
+@media screen and (max-width: 950px) {
+  .profile__exit {
+    margin-top: 20px;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__exit {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+}
+
 .profile__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -81,18 +152,38 @@
       -ms-flex-align: center;
           align-items: center;
   height: 60px;
-  padding: 0 20px;
+  padding: 0 5px;
   background-color: #FEE0D4;
   border-width: 0;
   font-size: 24px;
   line-height: 29px;
   font-style: italic;
   cursor: pointer;
-  font-family: 'Cormorant';
   text-decoration: none;
+  font-family: 'Cormorant';
 }
 
-/*, 'Arial', 'sans-serif'*/
+@media screen and (max-width: 1280px) {
+  .profile__button {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .profile__button {
+    width: -webkit-fill-available;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__button {
+    padding: 0 10px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
 .profile__name {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,6 +196,21 @@
   font-size: 48px;
   line-height: 58px;
   margin-right: auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .profile__name {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__name {
+    font-size: 36px;
+    line-height: 43px;
+  }
 }
 
 .profile__object {
@@ -123,11 +229,49 @@
   font-size: 36px;
   line-height: 43px;
   font-style: italic;
-  font-weight: 600;
+  font-weight: 500;
   border-radius: 20px;
   border: 2px solid black;
   background-color: transparent;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1280px) {
+  .profile__object {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 400;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .profile__object {
+    padding: 0 20px;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .profile__object {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__object {
+    padding: 0 10px;
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .profile__object {
+    margin: 20px auto;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
 }
 
 .profile__main {
@@ -141,7 +285,7 @@
 
 .profile__confirm {
   font-style: italic;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 24px;
   line-height: 36px;
   display: -webkit-box;
@@ -154,20 +298,7 @@
   color: black;
 }
 
-a:hover, button:hover {
-  text-decoration: underline;
-}
-
-.profile__nav_active {
-  color: #f50303;
-}
-
-@media screen and (max-width: 1240px) {
-  .profile__object {
-    font-size: 24px;
-    line-height: 29px;
-    font-weight: 400;
-  }
+@media screen and (max-width: 1280px) {
   .profile__confirm {
     font-size: 18px;
     line-height: 24px;
@@ -175,84 +306,75 @@ a:hover, button:hover {
   }
 }
 
-@media screen and (max-width: 1024px) {
-  .profile__block {
-    margin: 10px 40px;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-  }
-  .profile__name {
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 42px;
-  }
-  .profile__object {
-    padding: 0 20px;
-    height: 60px;
-  }
+a {
+  color: black;
 }
 
-@media screen and (max-width: 850px) {
-  .profile__button {
-    height: 50px;
-    padding: 0 10px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-  .profile__name {
-    font-size: 36px;
-    line-height: 43px;
-  }
-  .profile__object {
-    padding: 0 10px;
-    height: 50px;
-    font-size: 24px;
-    line-height: 29px;
-  }
+a:hover, button:hover {
+  text-decoration: underline;
 }
 
-@media screen and (max-width: 850px) {
-  .profile__block {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-  }
-  .profile__user {
-    margin-right: 0;
-  }
-  .profile__exit {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: end;
-  }
-  .profile__button {
+.profile__nav_active {
+  text-decoration: underline;
+}
+
+.profile__home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+}
+
+@media (max-width: 850px) {
+  .profile__home .profile__button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    height: 50px;
     padding: 0;
     font-size: 18px;
     line-height: 22px;
   }
-  .profile__block h1, .profile__block button {
+  .profile__home .profile__block h1, .profile__home .profile__block button {
     justify-items: start;
   }
-  .profile__name {
+  .profile__home .profile__name {
     font-size: 24px;
     line-height: 29px;
     margin-right: auto;
     margin-bottom: 20px;
   }
-  .profile__object {
-    margin: 20px auto;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
+}
+
+@media screen and (max-width: 950px) {
+  .profile__home, .profile__confirm, .profile__user, .profile__exit {
+    height: 60px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
+  .profile__confirm {
+    margin: auto;
+    text-align: center;
+  }
+  .profile__user {
+    margin-right: 0;
+  }
+}
+
+.profile__go-back {
+  font-style: italic;
+  font-weight: 600;
+  font-size: 24px;
+  font-family: 'Cormorant';
+  color: #000;
+  line-height: 29px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  background-color: transparent;
+  margin-left: 10px;
+  padding: 0;
+  border: none;
 }
 /*# sourceMappingURL=Profile.css.map */
