--- a/src/components/AddCard/AddNewFlats.sass
+++ b/src/components/AddCard/AddNewFlats.sass
@@ -16,6 +16,9 @@
   width: 50px
   height: 50px
 
+.add-form__item-error
+  color: red
+
 .add-form
   display: flex
   width: 95%
@@ -117,7 +120,13 @@
   &:focus
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.35)
     
-
+.button__column
+  display: flex
+  flex-direction: column
+.button__row
+  display: flex
+  flex-direction: row
+  
 .add-form__button_disabled
   background: #c6c7cc
 
@@ -159,6 +168,3 @@
       width: 250px
 
 
-
-.add-form__type_rooms
-  flex-direction: column
