--- a/src/components/CardDesc/CardDesc.sass
+++ b/src/components/CardDesc/CardDesc.sass
@@ -40,8 +40,11 @@
     @media (max-width: 850px)
       align-items: center
 .popup__image
-  height: 80vh
+  max-height: 80vh
   margin: auto
+  max-width: 80vw
+  height: fit-content
+  width: fit-content
 .desc__photo_m
   position: relative
   @media screen
