--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -86,8 +86,15 @@
 }
 
 .popup__image {
-  height: 80vh;
+  max-height: 80vh;
   margin: auto;
+  max-width: 80vw;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .desc__photo_m {
