--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -81,6 +81,11 @@
   align-items: center
   justify-items: flex-start
   max-height: 365px
+  list-style-type: none
+  margin-block-start: 0
+  margin-block-end: 0
+  padding-inline-start: 0
+  word-break: break-all
   @media screen
     @media (max-width: 1240px)
       column-gap: 50px
@@ -118,7 +123,7 @@
       align-self: center
       margin: 22px
     @media (max-width: 650px)
-      height: 400px
+      max-height: 400px
     @media (max-width: 550px)
       width: 200px
       height: 260px
@@ -186,6 +191,7 @@
   top: 5px
   cursor: pointer
   transition: opacity 0.3s
+  z-index: 5
   &:hover
     opacity: 0.6
 
