--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -16,18 +16,34 @@
   min-height: 80px;
   background: -webkit-gradient(linear, left top, left bottom, from(#fff4e4), color-stop(#ffe0d4), color-stop(#ffe0d4), color-stop(#ffe0d4), to(#fff4e4));
   background: linear-gradient(#fff4e4, #ffe0d4, #ffe0d4, #ffe0d4, #fff4e4);
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  justify-self: center;
   -webkit-box-shadow: inset 0 20px 40px #ffcba4;
           box-shadow: inset 0 20px 40px #ffcba4;
-  text-align: center;
 }
 
 @media screen and (min-width: 1440px) {
   .menu__list {
     width: 1440px;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .menu__list {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 120px;
   }
 }
 
@@ -46,6 +62,7 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  width: 20%;
 }
 
 .menu__item:hover {
@@ -56,16 +73,12 @@
   .menu__item {
     line-height: 36px;
     font-size: 24px;
-    width: 91%;
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 750px) {
   .menu__item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    width: 91%;
   }
 }
 
