--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -7,15 +7,20 @@
   padding-inline-start: 0
   min-height: 80px
   background: linear-gradient(#fff4e4, #ffe0d4, #ffe0d4, #ffe0d4, #fff4e4)
-  justify-content: space-around
-  justify-self: center
   //margin-top: 20px
-  box-shadow: inset 0 20px 40px #ffcba4;
-  text-align: center
+  box-shadow: inset 0 20px 40px #ffcba4
   @media screen
     @media (min-width: 1440px)
       width: 1440px
       margin: 0 auto
+    @media (max-width: 750px)
+      justify-content: space-around
+      justify-self: center
+      text-align: center
+    @media (max-width: 550px)
+      flex-direction: column
+      min-height: 120px
+
 
 .menu__item
   display: flex
@@ -27,15 +32,15 @@
   color: #000
   text-decoration: none
   cursor: pointer
+  width: 20%
   &:hover
     text-decoration: underline
   @media screen
     @media (max-width: 1440px)
       line-height: 36px
       font-size: 24px
+    @media(max-width: 750px)
       width: 91%
-    @media (max-width: 550px)
-      flex-direction: column
 
 .menu__item_active
   text-decoration: underline
