--- a/src/components/AddCard/AddNewFlats.sass
+++ b/src/components/AddCard/AddNewFlats.sass
@@ -127,6 +127,9 @@
 .button__row
   display: flex
   flex-direction: row
+  @media screen
+    @media (max-width: 850px)
+      flex-direction: column-reverse
   
 .add-form__button_disabled
   background: #c6c7cc
