--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -33,6 +33,9 @@
   z-index: 1
   position: relative
   //overflow: auto
+
+.popup__container__type_edit
+  height: 90%
 .popup__close
   background-image: url(../../images/close-icon.svg)
   background-repeat: no-repeat
