--- a/src/components/CardDesc/CardDesc.sass
+++ b/src/components/CardDesc/CardDesc.sass
@@ -35,6 +35,8 @@
       width: 260px
 .desc__photo
   position: relative
+  &:hover
+    cursor: pointer
   @extend %flexCol
   @media screen
     @media (max-width: 850px)
@@ -89,6 +91,8 @@
   max-width: 100%
   gap: 10px
   justify-content: space-around
+  &:hover
+    cursor: pointer
   @extend %flexRow 
 .desc__photo_s
   width: 30%
