добавлены новые категории

--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -14,7 +14,7 @@
 .profile__nav
   display: flex
   flex-direction: row
-  margin: 15px 50px 15px 60px
+  margin: 15px 50px 15px
   font-size: 24px
   line-height: 29px
   font-style: italic
