--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,7 +10,7 @@
   margin: auto;
   background-color: #FFF4E4;
   min-width: 303px;
-  /*max-width: 1440px*/
+  max-width: 2400px;
   min-height: 100vh;
 }
 
@@ -130,5 +130,6 @@
   font-size: 20px;
   margin-left: 40px;
   font-weight: 600;
+  text-align: center;
 }
 /*# sourceMappingURL=App.css.map */
