--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -5,7 +5,7 @@
   margin: auto
   background-color: #FFF4E4
   min-width: 303px
-  /*max-width: 1440px*/
+  max-width: 2400px
   min-height: 100vh
 .popup
   visibility: hidden
@@ -86,3 +86,4 @@
   font-size: 20px
   margin-left: 40px
   font-weight: 600
+  text-align: center;
