--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -11,7 +11,7 @@
   box-shadow: inset 0 20px 40px #ffcba4
   @media screen
     @media (min-width: 1440px)
-      width: 1440px
+      width: 100%
       margin: 0 auto
     @media (max-width: 750px)
       justify-content: space-around
