--- a/src/components/Confirm/Confirm.sass
+++ b/src/components/Confirm/Confirm.sass
@@ -4,7 +4,7 @@
   justify-content: space-between
   width: -webkit-fill-available
   @media screen
-    @media (max-width: 850px)
+    @media (max-width: 900px)
       flex-direction: column
       width: 100%
       border: 3px solid rgba(251, 207, 207, 0.8)
@@ -39,7 +39,7 @@
   align-items: center
   cursor: pointer
   background-color: transparent
-  margin: 0 5px
+  //margin: 0 5px
   border: none
   padding: 0 2px
   width: 60px
