--- a/src/components/AddCard/AddNewObject.sass
+++ b/src/components/AddCard/AddNewObject.sass
@@ -95,7 +95,7 @@
   border: 0
   display: flex
   flex-direction: column
-  padding: 0 0 10px;
+  padding: 0 0 10px
 
 .add-form__type_area
   display: flex
